@@ -59,9 +59,10 @@ class CapacitySchedulerPage extends RmView {
   static final float Q_MAX_WIDTH = 0.8f;
   static final float Q_STATS_POS = Q_MAX_WIDTH + 0.05f;
   static final String Q_END = "left:101%";
-  static final String Q_GIVEN = "left:0%;background:none;border:1px dashed rgba(0,0,0,0.25)";
-  static final String Q_OVER = "background:rgba(255, 140, 0, 0.8)";
-  static final String Q_UNDER = "background:rgba(50, 205, 50, 0.8)";
+  static final String Q_GIVEN =
+      "left:0%;background:none;border:1px dashed #BFBFBF";
+  static final String Q_OVER = "background:#FFA333";
+  static final String Q_UNDER = "background:#5BD75B";
 
   @RequestScoped
   static class CSQInfo {
